RESOLVED FIXED 243955
REGRESSION (238684@main, 985de701a): Add back fault logs when WebKit process calls exit()
https://bugs.webkit.org/show_bug.cgi?id=243955
Summary REGRESSION (238684@main, 985de701a): Add back fault logs when WebKit process ...
David Kilzer (:ddkilzer)
Reported 2022-08-15 14:49:28 PDT
Commit 985de701a (238684@main) changed fault logs to error logs for one case when exit() is called, but this makes it impossible to know how often this occurs. We should change the error logs back to fault logs so we can measure how often this occurs.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-15 14:50:07 PDT
David Kilzer (:ddkilzer)
Comment 2 2022-08-15 15:13:48 PDT
David Kilzer (:ddkilzer)
Comment 3 2022-08-15 15:19:56 PDT
(In reply to David Kilzer (:ddkilzer) from comment #2) > Pull request: https://github.com/WebKit/WebKit/pull/3326 Going to withdraw the PR here as it's going to cause issues with testers again.
David Kilzer (:ddkilzer)
Comment 4 2022-08-15 15:28:40 PDT
(In reply to David Kilzer (:ddkilzer) from comment #3) > (In reply to David Kilzer (:ddkilzer) from comment #2) > > Pull request: https://github.com/WebKit/WebKit/pull/3326 > > Going to withdraw the PR here as it's going to cause issues with testers > again. Oops, I was looking at a different radar that claimed the fault logs caused test failures, but there were no changes made for that radar, so I'm proceeding with the fix.
EWS
Comment 5 2022-08-16 13:19:57 PDT
Committed 253479@main (5738533dfc4f): <https://commits.webkit.org/253479@main> Reviewed commits have been landed. Closing PR #3326 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.