REGRESSION (238684@main, 985de701a): Add back fault logs when WebKit process calls exit() https://bugs.webkit.org/show_bug.cgi?id=243955 <rdar://98689492>

Reviewed by Chris Dumez.

* Source/WebKit/Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceMain.mm:
(WebKit::XPCServiceEventHandler):
- Change RELEASE_LOG_ERROR() back to RELEASE_LOG_FAULT() when
  the WebKit process is about to call exit().

Canonical link: https://commits.webkit.org/253479@main